--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initual-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="2.png" type="image/png"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Lake Line</title>
 </head>
 <body>
@@ -38,15 +39,21 @@
     <div id="body_button">
         <div class="button_hola"><span><a href="#contact-section">Learn more</a></span></div>
     </div>
-     
+     <hr class="hr">
     </section>
 <!--end welcome section-->
 <!--start about section-->
-<section>
-
+<section id="about-section" class="about-section">
+  <h1 class="about-text">Lake line is a digital agency with rock solid expertise in UI/UX and graphic design. </h1> 
+  <p class="about-text-small"> We create apps, websites, and brands.</p>
+  <p class="about-text-1">With a team of 3 people, we help our clients to get the most useful,
+     outstanding and efficient digital solutions for their businesses.</p>
+     <h3 class="about-text-2">Our Story</h3>
+     <p class="about-text-1">Our story started 10 years ago by Hanna and her family. At that time Lake Line. 
+       We were fresh, green and young. Our team had only 3 people.</p>
 </section>
 <!--end about section-->
-<!--start services section-->
+<!--start projects section-->
 <section id="projects-section">
     <h2 class="projects-section-header">Our projects:</h2>
     <div class="projects-grid">
@@ -156,13 +163,56 @@
     ></a>
   </section>
 </section>
-<!--end services section-->
-<!--contact section-->
-<section>
+<!--end projects section-->
 
+<!--contact section-->
+<section id="contact-section" class="contact-section">
+  <div>
+<h1 class="contact-heading">Contact us</h1>
+<div class="container">
+<div class="column1">
+<address>
+  Ukraine, Kyiv <br>
+  8 Sholom-Aleihema street,<br>
+  office 57<br>
+  02156<br>
+</address>
+</div>
+<div class="column-2">
+  <address>
+Ukraine, Sevastopol <br>
+6 Lebedya Street, <br>
+office 47 <br>
+00232><br>
+  </address>
+</div>
+</div>
+  </div>
+  <div class="contact-info">
+  <form class="decor">
+    <div class="form-left-decoration"></div>
+    <div class="form-right-decoration"></div>
+    <div class="circle"></div>
+    <div class="form-inner">
+      <h3>White us</h3>
+      <input type="text" placeholder="Name">
+      <input type="email" placeholder="Email">
+      <textarea placeholder="Leave your message here..." rows="3"></textarea>
+      <input type="submit" value="Send">
+    </div>
+  </form>
+</div>
+  </div>
 </section>
 <!--end contact section-->
-
+<footer>
+  <div class="social">
+<a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+<a href="https://www.instagram.com/?hl=en" class="fa fa-instagram"></a>
+</div>
+<img src="logo1.jpeg" alt="logo" class="logo-image-footer">
+<p class="copyright">&#169 2010–2020 Lake Line — All Rights Reserved.</p>
+</footer>
 <script></script>
 </body>
 </html>
